<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="238dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aldrich"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInput"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="69dp"
        android:fontFamily="@font/aldrich"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_alignTop="@+id/tvResults"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="108dp"
        android:layout_toStartOf="@+id/tvResults"
        android:fontFamily="@font/aldrich"
        android:textAlignment="center" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvResults"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_1"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_2"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_3"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_5"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_6"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_7"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/clear"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_8"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickNumbers"
            android:text="@string/_9"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/answer"
            app:layout_column="3"
            android:onClick="calculate"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickOperator"
            android:text="+"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickOperator"
            android:text="-"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:onClick="onClickOperator"
            android:text="*"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="/"
            app:layout_column="3"
            app:layout_row="3"
            android:onClick="onClickOperator" />
    </android.support.v7.widget.GridLayout>

</RelativeLayout>